--- a/mod01_review.ipynb
+++ b/mod01_review.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "b568e1f7",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "[400 rows x 11 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "a4c1aba7",
    "metadata": {},
    "outputs": [
@@ -284,7 +284,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,11 +303,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "c58526a0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Income       float64\n",
+       "Limit          int64\n",
+       "Rating         int64\n",
+       "Cards          int64\n",
+       "Age            int64\n",
+       "Education      int64\n",
+       "Own           object\n",
+       "Student       object\n",
+       "Married       object\n",
+       "Region        object\n",
+       "Balance        int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit.dtypes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -319,32 +343,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "27ba0f36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(55.6675)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# mean"
+    "# mean\n",
+    "Credit['Age'].mean()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "7632855f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(56.0)"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# median"
+    "# median\n",
+    "Credit['Age'].median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "4806a30d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(44)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# mode"
+    "# mode\n",
+    "Credit['Age'].mode()[0]"
    ]
   },
   {
@@ -362,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Subset = "
+    "Subset = Credit[['Age', 'Region', 'Income']]"
    ]
   },
   {
@@ -377,22 +437,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "0bc1b835",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Younger = "
+    "Younger = Subset[Subset['Age'] < 50]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "6e7c6740",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Older = "
+    "Older = Subset[Subset['Age'] >= 50]"
    ]
   },
   {
@@ -405,42 +465,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "a0492480",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Younger Group - Mean Income: 41.65203726708074\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of younger"
+    "# mean of younger\n",
+    "younger_mean = Younger['Income'].mean()\n",
+    "print(f\"Younger Group - Mean Income: {younger_mean}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "06057f97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Older Group - Mean Income: 47.6216569037657\n"
+     ]
+    }
+   ],
    "source": [
-    "# mean of older"
+    "# mean of older\n",
+    "older_mean = Older['Income'].mean()\n",
+    "print(f\"Older Group - Mean Income: {older_mean}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "38678f7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Younger Group - Median Income: 31.861\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of younger"
+    "# median of younger\n",
+    "younger_median = Younger['Income'].median()\n",
+    "print(f\"Younger Group - Median Income: {younger_median}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "b7bc82dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Older Group - Median Income: 33.694\n"
+     ]
+    }
+   ],
    "source": [
-    "# median of older"
+    "# median of older\n",
+    "older_median = Older['Income'].median()\n",
+    "print(f\"Older Group - Median Income: {older_median}\")"
    ]
   },
   {
@@ -456,7 +556,7 @@
    "id": "896e300a",
    "metadata": {},
    "source": [
-    "Type your answer here."
+    "For both older and younger groups, the difference in the mean and median suggests a right-skewed distribution of income, where the mean is far larger than the median in both scenarios. This difference could be caused by a small amount of people with higher incomes in both groups."
    ]
   },
   {
@@ -469,11 +569,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "d2954498",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['South', 'West', 'East'], dtype=object)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Region'].unique()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -485,11 +598,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "308f0c5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Region\n",
+       "South    199\n",
+       "West     102\n",
+       "East      99\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Region'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -501,35 +631,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "3bfc07c3",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(44.988533333333336)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit[Credit['Student'] == 'No']['Income'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "fad3d6c9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(32.966499999999996)"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit[Credit['Student'] == 'No']['Income'].median()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "b818baa7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(47.29205)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit[Credit['Student'] == 'Yes']['Income'].mean()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "acdb144a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(33.5655)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit[Credit['Student'] == 'Yes']['Income'].median()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -543,19 +725,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "id": "65cbe997",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Credit['Utilization'] = Credit['Balance'] / Credit['Limit']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "id": "d98dcbc9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    0.092346\n",
+       "1    0.135892\n",
+       "2    0.081979\n",
+       "3    0.101431\n",
+       "4    0.067592\n",
+       "Name: Utilization, dtype: float64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Utilization'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bfaf714",
+   "metadata": {},
+   "source": [
+    "### Use these partitions to compare the mean and median Income for each age group (less than 50 vs. 50+)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -567,11 +777,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "58512879",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(0.27693008426326576)"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Credit['Utilization'].max()"
+   ]
   }
  ],
  "metadata": {
