--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "951a9a58",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "id": "263cc530",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "id": "9ea0baf3",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "(322, 20)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "809c1c50",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "id": "4a826ee5",
    "metadata": {},
    "outputs": [],
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "ef6f69c2",
    "metadata": {},
    "outputs": [
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "id": "e96c7460",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
        "max    2460.000000  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 12,
    "id": "64eda761",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 16,
    "id": "6dc0fac0",
    "metadata": {},
    "outputs": [
@@ -650,18 +650,18 @@
     "mean_atbat = df_train['AtBat'].mean()\n",
     "std_atbat = df_train['AtBat'].std()\n",
     "\n",
-    "df['AtBat_st'] = (df['AtBat'] - mean_atbat) / std_atbat\n",
+    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat\n",
     "\n",
     "plt.figure(figsize=(10, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "plt.hist(df['AtBat'], bins=20, color='skyblue', edgecolor='black')\n",
+    "plt.hist(Hitters['AtBat'], bins=20, color='skyblue', edgecolor='black')\n",
     "plt.title('Original AtBat Distribution')\n",
     "plt.xlabel('Value')\n",
     "plt.ylabel('Frequency')\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.hist(df['AtBat_st'], bins=20, color='salmon', edgecolor='black')\n",
+    "plt.hist(Hitters['AtBat_st'], bins=20, color='salmon', edgecolor='black')\n",
     "plt.title('Standardized AtBat_st Distribution')\n",
     "plt.xlabel('Z-Score')\n",
     "plt.ylabel('Frequency')\n",
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "id": "a9f8e3c9",
    "metadata": {},
    "outputs": [
@@ -694,7 +694,7 @@
     }
    ],
    "source": [
-    "within_first_sd = df[df['AtBat_st'].abs() <= 1]\n",
+    "within_first_sd = Hitters[Hitters['AtBat_st'].abs() <= 1]\n",
     "\n",
     "count = len(within_first_sd)\n",
     "\n",
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 20,
    "id": "caeba6d3",
    "metadata": {},
    "outputs": [
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "a4ef3ba2",
    "metadata": {},
    "outputs": [
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 22,
    "id": "6ab5ba2f",
    "metadata": {},
    "outputs": [],
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "id": "ac7743dc",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 24,
    "id": "040fbabb",
    "metadata": {},
    "outputs": [],
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 25,
    "id": "50f1f78c",
    "metadata": {},
    "outputs": [],
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 26,
    "id": "bcf402b4",
    "metadata": {},
    "outputs": [
@@ -954,7 +954,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "bf54b862",
    "metadata": {},
    "outputs": [],
@@ -984,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "8d54c022",
    "metadata": {},
    "outputs": [
