--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -626,18 +626,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "6dc0fac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate the mean and standard deviation of AtBat from the training set\n",
-    "atbat_mean = Train['AtBat'].mean()\n",
-    "atbat_std = Train['AtBat'].std()\n",
+    "train_idx, test_idx = train_test_split(Hitters.index, test_size=0.3, random_state=42)\n",
+    "df_train = Hitters.loc[train_idx]\n",
     "\n",
-    "# Create the standardized variable AtBat_st\n",
-    "Train['AtBat_st'] = (Train['AtBat'] - atbat_mean) / atbat_std\n",
-    "Test['AtBat_st'] = (Test['AtBat'] - atbat_mean) / atbat_std"
+    "mean_atbat = df_train['AtBat'].mean()\n",
+    "std_atbat = df_train['AtBat'].std()\n",
+    "\n",
+    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat\n",
+    "\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "\n",
+    "plt.subplot(1, 2, 1)\n",
+    "plt.hist(Hitters['AtBat'], bins=20, color='skyblue', edgecolor='black')\n",
+    "plt.title('Original AtBat Distribution')\n",
+    "plt.xlabel('Value')\n",
+    "plt.ylabel('Frequency')\n",
+    "\n",
+    "plt.subplot(1, 2, 2)\n",
+    "plt.hist(Hitters['AtBat_st'], bins=20, color='salmon', edgecolor='black')\n",
+    "plt.title('Standardized AtBat_st Distribution')\n",
+    "plt.xlabel('Z-Score')\n",
+    "plt.ylabel('Frequency')\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
