--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -626,34 +626,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "6dc0fac0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_idx, test_idx = train_test_split(Hitters.index, test_size=0.3, random_state=42)\n",
-    "df_train = Hitters.loc[train_idx]\n",
+    "mean_atbat = Hitters['AtBat'].mean()\n",
+    "std_atbat = Hitters['AtBat'].std()\n",
     "\n",
-    "mean_atbat = df_train['AtBat'].mean()\n",
-    "std_atbat = df_train['AtBat'].std()\n",
-    "\n",
-    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat\n",
-    "\n",
-    "plt.figure(figsize=(10, 5))\n",
-    "\n",
-    "plt.subplot(1, 2, 1)\n",
-    "plt.hist(Hitters['AtBat'], bins=20, color='skyblue', edgecolor='black')\n",
-    "plt.title('Original AtBat Distribution')\n",
-    "plt.xlabel('Value')\n",
-    "plt.ylabel('Frequency')\n",
-    "\n",
-    "plt.subplot(1, 2, 2)\n",
-    "plt.hist(Hitters['AtBat_st'], bins=20, color='salmon', edgecolor='black')\n",
-    "plt.title('Standardized AtBat_st Distribution')\n",
-    "plt.xlabel('Z-Score')\n",
-    "plt.ylabel('Frequency')\n",
-    "\n",
-    "plt.show()"
+    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat"
    ]
   },
   {
@@ -668,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 39,
    "id": "a9f8e3c9",
    "metadata": {},
    "outputs": [
@@ -676,7 +657,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "189 rows\n"
+      "190 rows\n"
      ]
     }
    ],
