Mod03 AtBat_st Fix attempt

--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "263cc530",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "id": "9ea0baf3",
    "metadata": {},
    "outputs": [
@@ -65,7 +65,7 @@
        "(322, 20)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "id": "809c1c50",
    "metadata": {},
    "outputs": [
@@ -626,15 +626,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 57,
    "id": "6dc0fac0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AtBat int64\n",
+      "Hits int64\n",
+      "HmRun int64\n",
+      "Runs int64\n",
+      "RBI int64\n",
+      "Walks int64\n",
+      "Years int64\n",
+      "CAtBat int64\n",
+      "CHits int64\n",
+      "CHmRun int64\n",
+      "CRuns int64\n",
+      "CRBI int64\n",
+      "CWalks int64\n",
+      "League category\n",
+      "Division category\n",
+      "PutOuts int64\n",
+      "Assists int64\n",
+      "Errors int64\n",
+      "Salary float64\n",
+      "NewLeague category\n",
+      "AtBat_st float64\n"
+     ]
+    }
+   ],
    "source": [
     "mean_atbat = Hitters['AtBat'].mean()\n",
     "std_atbat = Hitters['AtBat'].std()\n",
     "\n",
-    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat"
+    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat\n",
+    "\n",
+    "for col in Hitters.columns:\n",
+    "    print(col, Hitters[col].dtypes)"
    ]
   },
   {
@@ -649,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 51,
    "id": "a9f8e3c9",
    "metadata": {},
    "outputs": [
@@ -657,7 +688,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "189 rows\n"
+      "190 rows\n"
      ]
     }
    ],
