Mod03 Last Attempt, I can't tell where the issue is for AtBat_st

--- a/mod03_eda.ipynb
+++ b/mod03_eda.ipynb
@@ -626,46 +626,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 66,
    "id": "6dc0fac0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "AtBat int64\n",
-      "Hits int64\n",
-      "HmRun int64\n",
-      "Runs int64\n",
-      "RBI int64\n",
-      "Walks int64\n",
-      "Years int64\n",
-      "CAtBat int64\n",
-      "CHits int64\n",
-      "CHmRun int64\n",
-      "CRuns int64\n",
-      "CRBI int64\n",
-      "CWalks int64\n",
-      "League category\n",
-      "Division category\n",
-      "PutOuts int64\n",
-      "Assists int64\n",
-      "Errors int64\n",
-      "Salary float64\n",
-      "NewLeague category\n",
-      "AtBat_st float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_atbat = Hitters['AtBat'].mean()\n",
     "std_atbat = Hitters['AtBat'].std()\n",
     "\n",
-    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat\n",
-    "\n",
-    "for col in Hitters.columns:\n",
-    "    print(col, Hitters[col].dtypes)"
+    "Hitters['AtBat_st'] = (Hitters['AtBat'] - mean_atbat) / std_atbat"
    ]
   },
   {
@@ -680,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 67,
    "id": "a9f8e3c9",
    "metadata": {},
    "outputs": [
@@ -693,9 +662,9 @@
     }
    ],
    "source": [
-    "within_first_sd = Hitters[Hitters['AtBat_st'].abs() <= 1]\n",
+    "within_one_std = Hitters[(Hitters['AtBat_st'] >= -1) & (Hitters['AtBat_st'] <= 1)]\n",
     "\n",
-    "count = len(within_first_sd)\n",
+    "count = len(within_one_std)\n",
     "\n",
     "print(f\"{count} rows\")"
    ]
