Mod05 All But One Goal Met

--- a/mod05_nonlinear.ipynb
+++ b/mod05_nonlinear.ipynb
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 199,
    "id": "500c728c",
    "metadata": {},
    "outputs": [],
@@ -1288,17 +1288,17 @@
     "    return np.mean((y_true - y_pred)**2)\n",
     "\n",
     "for df in [Train, Test, X_train, X_test]:\n",
-    "    # Polynomial term: temperature squared\n",
-    "    df['temp2'] = df['temp']**2\n",
-    "    # Interaction: Rush hour is much more predictive on working days\n",
-    "    df['rush_work'] = df['rushhour'] * df['workingday']\n",
-    "    # Interaction: Temperature and humidity (the \"feels like\" effect)\n",
-    "    df['temp_hum'] = df['temp'] * df['hum']"
+    "\n",
+    "    X_train['mnth_num'] = pd.to_numeric(X_train['mnth'], errors='coerce').fillna(0)\n",
+    "    X_test['mnth_num'] = pd.to_numeric(X_test['mnth'], errors='coerce').fillna(0)\n",
+    "\n",
+    "    X_train['hr_num'] = pd.to_numeric(X_train['hr'], errors='coerce').fillna(0)\n",
+    "    X_test['hr_num'] = pd.to_numeric(X_test['hr'], errors='coerce').fillna(0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 305,
    "id": "953ac193",
    "metadata": {},
    "outputs": [
@@ -1332,79 +1332,65 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>intercept</th>\n",
-       "      <td>-9.8836</td>\n",
-       "      <td>10.272</td>\n",
-       "      <td>-0.962</td>\n",
-       "      <td>0.336</td>\n",
+       "      <td>-1.356700e+00</td>\n",
+       "      <td>5.308000e+00</td>\n",
+       "      <td>-0.256</td>\n",
+       "      <td>0.798</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>temp</th>\n",
-       "      <td>587.2329</td>\n",
-       "      <td>32.501</td>\n",
-       "      <td>18.068</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>temp2</th>\n",
-       "      <td>-229.3544</td>\n",
-       "      <td>25.332</td>\n",
-       "      <td>-9.054</td>\n",
+       "      <th>atemp</th>\n",
+       "      <td>2.325264e+02</td>\n",
+       "      <td>6.311000e+00</td>\n",
+       "      <td>36.845</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>hum</th>\n",
-       "      <td>21.3547</td>\n",
-       "      <td>13.216</td>\n",
-       "      <td>1.616</td>\n",
-       "      <td>0.106</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>windspeed</th>\n",
-       "      <td>-76.7945</td>\n",
-       "      <td>7.733</td>\n",
-       "      <td>-9.931</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hr_sin</th>\n",
-       "      <td>-64.3261</td>\n",
-       "      <td>1.402</td>\n",
-       "      <td>-45.870</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>hr_cos</th>\n",
-       "      <td>-53.4075</td>\n",
-       "      <td>1.404</td>\n",
-       "      <td>-38.039</td>\n",
+       "      <td>-8.027220e+01</td>\n",
+       "      <td>5.834000e+00</td>\n",
+       "      <td>-13.760</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>rushhour</th>\n",
-       "      <td>-14.3309</td>\n",
-       "      <td>4.458</td>\n",
-       "      <td>-3.215</td>\n",
-       "      <td>0.001</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>workingday</th>\n",
-       "      <td>-37.9046</td>\n",
-       "      <td>2.139</td>\n",
-       "      <td>-17.720</td>\n",
+       "      <td>1.383681e+02</td>\n",
+       "      <td>2.780000e+00</td>\n",
+       "      <td>49.774</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>rush_work</th>\n",
-       "      <td>223.6613</td>\n",
-       "      <td>5.345</td>\n",
-       "      <td>41.848</td>\n",
+       "      <th>season</th>\n",
+       "      <td>1.815980e+01</td>\n",
+       "      <td>1.002000e+00</td>\n",
+       "      <td>18.119</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>temp_hum</th>\n",
-       "      <td>-212.6180</td>\n",
-       "      <td>26.166</td>\n",
-       "      <td>-8.126</td>\n",
+       "      <th>mnth_num</th>\n",
+       "      <td>3.827000e-13</td>\n",
+       "      <td>9.520000e-15</td>\n",
+       "      <td>40.212</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hr_num</th>\n",
+       "      <td>1.642900e+00</td>\n",
+       "      <td>2.340000e-01</td>\n",
+       "      <td>7.010</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hr_sin</th>\n",
+       "      <td>-5.175410e+01</td>\n",
+       "      <td>2.378000e+00</td>\n",
+       "      <td>-21.761</td>\n",
+       "      <td>0.000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hr_cos</th>\n",
+       "      <td>-5.094560e+01</td>\n",
+       "      <td>1.553000e+00</td>\n",
+       "      <td>-32.812</td>\n",
        "      <td>0.000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1412,21 +1398,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                coef  std err       t  P>|t|\n",
-       "intercept    -9.8836   10.272  -0.962  0.336\n",
-       "temp        587.2329   32.501  18.068  0.000\n",
-       "temp2      -229.3544   25.332  -9.054  0.000\n",
-       "hum          21.3547   13.216   1.616  0.106\n",
-       "windspeed   -76.7945    7.733  -9.931  0.000\n",
-       "hr_sin      -64.3261    1.402 -45.870  0.000\n",
-       "hr_cos      -53.4075    1.404 -38.039  0.000\n",
-       "rushhour    -14.3309    4.458  -3.215  0.001\n",
-       "workingday  -37.9046    2.139 -17.720  0.000\n",
-       "rush_work   223.6613    5.345  41.848  0.000\n",
-       "temp_hum   -212.6180   26.166  -8.126  0.000"
+       "                   coef       std err       t  P>|t|\n",
+       "intercept -1.356700e+00  5.308000e+00  -0.256  0.798\n",
+       "atemp      2.325264e+02  6.311000e+00  36.845  0.000\n",
+       "hum       -8.027220e+01  5.834000e+00 -13.760  0.000\n",
+       "rushhour   1.383681e+02  2.780000e+00  49.774  0.000\n",
+       "season     1.815980e+01  1.002000e+00  18.119  0.000\n",
+       "mnth_num   3.827000e-13  9.520000e-15  40.212  0.000\n",
+       "hr_num     1.642900e+00  2.340000e-01   7.010  0.000\n",
+       "hr_sin    -5.175410e+01  2.378000e+00 -21.761  0.000\n",
+       "hr_cos    -5.094560e+01  1.553000e+00 -32.812  0.000"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,16 +1419,14 @@
     "# Build your linear regression model here.\n",
     "vars_to_include = [\n",
     "    'intercept', \n",
-    "    'temp', \n",
-    "    'temp2',\n",
+    "    'atemp',\n",
     "    'hum',\n",
-    "    'windspeed',\n",
-    "    'hr_sin', \n",
-    "    'hr_cos', \n",
     "    'rushhour',\n",
-    "    'workingday',\n",
-    "    'rush_work',\n",
-    "    'temp_hum'\n",
+    "    'season',\n",
+    "    'mnth_num',\n",
+    "    'hr_num',\n",
+    "    'hr_sin',\n",
+    "    'hr_cos',\n",
     "] \n",
     "\n",
     "model_final = sm.OLS(y_train, X_train[vars_to_include])\n",
@@ -1454,7 +1436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 304,
    "id": "2c45071f",
    "metadata": {},
    "outputs": [
@@ -1462,8 +1444,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MSE train:  5390.085018588633\n",
-      "MSE test:  5576.11883156204\n"
+      "MSE train:  6584.591338422475\n",
+      "MSE test:  6914.8604887115835\n"
      ]
     }
    ],
