Mod05 hum2 fixes?

--- a/mod05_nonlinear.ipynb
+++ b/mod05_nonlinear.ipynb
@@ -1271,7 +1271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1119,
+   "execution_count": 1160,
    "id": "500c728c",
    "metadata": {},
    "outputs": [],
@@ -1296,12 +1296,15 @@
     "\n",
     "    X_train['rush_sea_day'] = X_train['rush_sea'] * X_train['workingday']\n",
     "    X_test['rush_sea_day'] = X_test['rush_sea'] * X_test['workingday']\n",
+    "\n",
+    "    X_train['hum2'] = X_train['hum'] * X_train['hum']\n",
+    "    X_test['hum2'] = X_test['hum'] * X_test['hum']\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1128,
+   "execution_count": 1164,
    "id": "953ac193",
    "metadata": {},
    "outputs": [
@@ -1413,7 +1416,7 @@
        "hr_cos       -58.9138    1.529 -38.523  0.000"
       ]
      },
-     "execution_count": 1128,
+     "execution_count": 1164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1422,7 +1425,8 @@
     "# Build your linear regression model here.\n",
     "vars_to_include = [\n",
     "    'intercept', # Keep\n",
-    "    #'atemp',\n",
+    "    #'temp',\n",
+    "    #'temp2',\n",
     "    #'hum',\n",
     "    'hum2',\n",
     "    'rush_sea',\n",
@@ -1441,7 +1445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1129,
+   "execution_count": 1165,
    "id": "2c45071f",
    "metadata": {},
    "outputs": [
